# boloco

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  boloco.py  pyproject.toml  requirements.txt  setup.py  test_modern_features.py
.github/workflows/: ci.yml
boloco/: boloco.py  cli.py  enhanced.py  modern_cli.py  modern_formats.py
boloco/data/mt10/20241208-093133/: boloco-test-mt10_se42_ex4383_ra15.txt  boloco-validate-mt10_se42_ex4381_ra15.txt
boloco/data/mt13/20241208-140420/: boloco-validate-mt13_se42_ex134844_ra15.txt
boloco/data/mt3/20241208-093116/: boloco-test-mt3_se42_ex3_ra15.txt  boloco-train-mt3_se42_ex11_ra70.txt  boloco-validate-mt3_se42_ex2_ra15.txt
boloco/data/mt4/20241208-140357/: boloco-test-mt4_se42_ex7_ra15.txt
boloco/data/mt5/20241208-135836/: boloco-train-mt5_se42_ex90_ra70.txt  boloco-validate-mt5_se42_ex18_ra15.txt
boloco/data/mt6/20241208-093104/: boloco-validate-mt6_se42_ex49_ra15.txt
boloco/data/mt7/20241208-093107/: boloco-validate-mt7_se42_ex164_ra15.txt
boloco/data/mt9/20241208-140407/: boloco-test-mt9_se42_ex1487_ra15.txt  (+1 more)
data/mt10/20241208-093133/: boloco-train-mt10_se42_ex20444_ra70.txt
data/mt11/20241208-140410/: boloco-test-mt11_se42_ex13972_ra15.txt  boloco-train-mt11_se42_ex65193_ra70.txt  boloco-validate-mt11_se42_ex13969_ra15.txt
data/mt12/20241208-140413/: boloco-test-mt12_se42_ex42489_ra15.txt  boloco-train-mt12_se42_ex198273_ra70.txt  boloco-validate-mt12_se42_ex42486_ra15.txt
data/mt13/20241208-140420/: boloco-test-mt13_se42_ex134846_ra15.txt  boloco-train-mt13_se42_ex629272_ra70.txt
data/mt14/20241208-140435/: boloco-test-mt14_se42_ex417217_ra15.txt  boloco-train-mt14_se42_ex1946999_ra70.txt  boloco-validate-mt14_se42_ex417213_ra15.txt
data/mt15/20241208-140522/: boloco-test-mt15_se42_ex1321136_ra15.txt  boloco-train-mt15_se42_ex6165291_ra70.txt  boloco-validate-mt15_se42_ex1321133_ra15.txt
data/mt16/20241208-140757/: boloco-test-mt16_se42_ex4126968_ra15.txt  boloco-train-mt16_se42_ex19259175_ra70.txt  boloco-validate-mt16_se42_ex4126966_ra15.txt
data/mt17/20241208-151524/: boloco-test-mt17_se42_ex13054183_ra15.txt  boloco-train-mt17_se42_ex60919509_ra70.txt  boloco-validate-mt17_se42_ex13054179_ra15.txt
data/mt4/20241208-140357/: boloco-train-mt4_se42_ex25_ra70.txt  boloco-validate-mt4_se42_ex5_ra15.txt
data/mt5/20241208-135836/: boloco-test-mt5_se42_ex22_ra15.txt
data/mt6/20241208-093104/: boloco-test-mt6_se42_ex52_ra15.txt  boloco-train-mt6_se42_ex233_ra70.txt
data/mt7/20241208-093107/: boloco-test-mt7_se42_ex167_ra15.txt  boloco-train-mt7_se42_ex767_ra70.txt
data/mt8/20241208-140404/: boloco-test-mt8_se42_ex463_ra15.txt  boloco-train-mt8_se42_ex2152_ra70.txt  boloco-validate-mt8_se42_ex460_ra15.txt
data/mt9/20241208-140407/: boloco-validate-mt9_se42_ex1484_ra15.txt
demo_final/: README.md  dataset.json
final_test/: README.md  dataset.json  dataset_test.jsonl  dataset_train.jsonl  dataset_validation.jsonl
poetry_test/: README.md
test_cleaned/: README.md  dataset.json
test_output/: README.md  dataset_test.jsonl  dataset_train.jsonl  dataset_validation.jsonl
test_refactored/: README.md  dataset.json
tests/: __init__.py  test_enhanced_features.py
